# OpenYSF

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO  run
.cache/clangd/index/: assets.h.13EDAB193FDA0306.idx  audio.h.6B233A81F6C301B6.idx  glad.c.A14AAF7BB1481DF3.idx  glad.h.647BF17BEE52685A.idx  graphics.h.0140B34DD766B144.idx  imconfig.h.AB77E02EFEFC42F3.idx  imgui.cpp.C07131AA2242F1E1.idx  imgui.h.93720F583DC7ED7E.idx  imgui.h.C2E8B74FEEEB6F73.idx  imgui_demo.cpp.0140392619511B20.idx  imgui_draw.cpp.8AF07CE2D3E719A5.idx  imgui_impl_opengl3.cpp.083937F99FB50094.idx  imgui_impl_opengl3.h.DE76071EA8148C4F.idx  imgui_impl_opengl3_loader.h.96D5F652ECAA2EDD.idx  imgui_impl_sdl.cpp.785D59A4CA075506.idx  imgui_impl_sdl.h.B90CCF7F52E9F832.idx  imgui_internal.h.933DCD2BDBD5B575.idx  imgui_tables.cpp.460AD3CF8794A135.idx  imgui_widgets.cpp.E904F106F9E6A098.idx  implot.cpp.31B766F5011FAFAD.idx  implot.h.E881AA8F685EE6F9.idx  implot_demo.cpp.616693337B94F16C.idx  implot_internal.h.34D779422F03EDAD.idx  implot_items.cpp.360719CE6A6BB7EF.idx  imstb_rectpack.h.9E60E89436D371D8.idx  imstb_textedit.h.FE93839FCE617932.idx  imstb_truetype.h.B3E09F78FD40148F.idx  main.cpp.0F06CAA1A6A9AB25.idx  math.h.056B44DA17EC0C70.idx  parser.h.FDCC30FC1E08E4FB.idx
docs/: PRD.md  backlog.md  roadmap.md  v1-prd.md  v1-spec.md  v2-prd.md  v2-roadmap.md  v2-specs.md  v3-spec.md
docs/superpowers/plans/: 2026-06-25-flight-control-surfaces.md
resources/: box.dnm  dnm_example.dnm  rectangle.dnm  srf_example.srf  triangle.dnm
src/: aircraft.cpp  aircraft.h  assets.h  audio.h  audio.hpp  camera.cpp  camera.h  canvas.cpp  canvas.h  containers.hpp  gpu.h  gpu.hpp  graphics.h  ground_obj.cpp  ground_obj.h  imgui.h  imgui.hpp  log.hpp  main.cpp  math.h  math.hpp  memory.cpp  opengl.hpp  parser.h  parser.hpp  scenery.cpp  scenery.h  settings.h  sysmon.h  utils.cpp  utils.hpp  world.h
